src/style/components/_Experience.scss
.experience_wrapper {
  .exp_wrapper {
    max-width: 768px;
    margin: 0 auto;

    h2 {
      text-align: center;
    }

    .item_wrapper {
      padding-bottom: 15px;

      .frontmatter {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
      }

      .item_container {
        margin-top: 5px;

        h3 {
          text-decoration: underline;
          display: inline;
          margin: 0;
        }
      }
    }
  }
}

